Change Log for XavaProjects
===========================

- Fix: Navigating between plans with issues with no plannedFor date shows errors to the user.

XavaProjects 2025.10 (2025-10-20)
---------------------------------
- OpenXava upgraded to OpenXava 7.6.1.
- Issue's plannedFor date is shown with different colors for today, yesterday and the day before yesterday.

XavaProjects 2025.09 (2025-9-22)
--------------------------------
- OpenXava upgraded to OpenXava 7.6.

XavaProjects 2025.06 (2025-6-23)
--------------------------------
- OpenXava upgraded to OpenXava 7.5.3.

XavaProjects 2025.05bis (2025-5-26)
-----------------------------------
- OpenXava upgraded to OpenXava 7.5.2.
- Eclipse configuration files removed from GitHub code, still works with Eclipse importing as Maven project.
- Fix: Email reminder does not work for a schema different from the default one (like from an organization).


XavaProjects 2025.05 (2025-5-5)
-------------------------------
- OpenXava upgraded to OpenXava 7.5.1.

XavaProjects 2025.03 (2025-3-26)
--------------------------------
- OpenXava upgraded to OpenXava 7.5.

XavaProjects 2025.01 (2025-1-13)
--------------------------------
- OpenXava upgraded to OpenXava 7.4.5.

XavaProjects 2024.12 (2024-12-10)
---------------------------------
- Saving an issue from MyCalendar module returns to the calendar view (the list).
- Added the 'Planned for' date to the issues list in plan.  
- MySQL JDBC driver upgraded to 9.1.
- OpenXava upgraded to OpenXava 7.4.4.
- Fix: Security vulnerability from dependencies.
- Fix: If no IssueStatus or IssueType by default for calendar an error is shown on create issue in calendar. 

XavaProjects 2024.11 (2024-11-19)
---------------------------------
- Email reminder to worker for his planned issues for the day, using Quartz.
- OpenXava upgraded to OpenXava 7.4.3.

XavaProjects 2024.10 (2024-10-14)
---------------------------------
- New MyCalendar module.
- Resize columns for lists enabled.